--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "angular": "^1.5.7",
     "express": "^4.14.0",
-    "jade": "^1.11.0"
+    "express-session": "^1.13.0",
+    "jade": "^1.11.0",
+    "mongoose": "^4.5.2"
   }
 }
