--- a/project/package.json
+++ b/project/package.json
@@ -22,8 +22,12 @@
   "dependencies": {
     "angular": "^1.5.7",
     "express": "^4.14.0",
+    "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
-    "mongoose": "^4.5.2"
+    "jsonwebtoken": "^7.0.1",
+    "mongoose": "^4.5.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
