--- a/project/bower.json
+++ b/project/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.5.7",
     "angular-resource": "^1.5.7",
     "angular-route": "^1.5.7",
-    "bootstrap": "v4.0.0-alpha.2"
+    "bootstrap": "v4.0.0-alpha.2",
+    "ng-file-upload": "^12.0.4"
   }
 }
