--- a/project/bower.json
+++ b/project/bower.json
@@ -20,6 +20,7 @@
     "angular-resource": "^1.5.7",
     "angular-route": "^1.5.7",
     "bootstrap": "v4.0.0-alpha.2",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "angular-animate": "^1.5.7"
   }
 }
