Yang telah dilakukan : 1. menambah atribut nim, username dan foto pada model user 2. menambah atribut lock pada model topic 3. sebagian besar front-end 4. menambahkan gem:         1. omniauth : untuk oauth         2. omniauth-facebook : untuk oauth facebook         3. omniauth-google-oauth2 : untuk oauth google         4. facebox-rails : untuk menampilkan pop-up box         5. paperclip : untuk support attachment         6. ckeditor : untuk wyswig text editor 5. mendefinisikan changelock pada controller topic 6. menambahkan fitur search 7. definisi method search pada topic dan post 8. mengubah index agar dapat digunakan untuk search 9. menambahkan controller callbacks untuk menghandle callbacks dari omniauth facebook dan goo$ 10. mendefinisikan facebook dan google pada callbacks controller 11. mengubah parameter untuk sign up dan edit user untuk devise melalui application controller 12. mencegah render layout pada saat histscontroller digunakan (karena hists ditampilkan pada$ 13. mendefinisikan method self.from_omni untuk menerima data dari omniauth 14. mendefinisikan method validate_username untuk validasi username agar tidak ada username y$ 15. mendefinisikan meethod find_for_database_authentication untuk mengubah authentication yan$ 16. menambahkan validasi nim 17. membuat mailer untuk kirim email code forget password

--- a/OmoCommunity/test/fixtures/hists.yml
+++ b/OmoCommunity/test/fixtures/hists.yml
@@ -2,8 +2,10 @@
 
 one:
   Title: MyString
-  Content: MyString
+  Content: MyText
+  post_id: 
 
 two:
   Title: MyString
-  Content: MyString
+  Content: MyText
+  post_id: 
