--- a/project/package.json
+++ b/project/package.json
@@ -24,6 +24,7 @@
     "jade": "^1.11.0",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.2",
+    "node-twitter-api": "^1.7.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
