--- a/project/bower.json
+++ b/project/bower.json
@@ -21,6 +21,9 @@
     "angular-route": "^1.5.7",
     "bootstrap": "v4.0.0-alpha.2",
     "ng-file-upload": "^12.0.4",
-    "angular-animate": "^1.5.7"
+    "angular-animate": "^1.5.7",
+    "angular-sanitize": "^1.5.8",
+    "jquery": "^3.1.0",
+    "jquery-ui": "^1.12.0"
   }
 }
